<resources>
    <string name="app_name">SimpleNews</string>
    <string name="action_settings">Settings</string>
    <string name="name">Xing He</string>
    <string name="app_description">跟着Commits实现Simple News</string>
    <string name="app_github_url">https://github.com/Gnotes/learn-android-from-commits</string>
    <string name="author">作者：Xing He</string>
    <string name="email">邮箱：1245036094@qq.com</string>
    <string name="blog">Github：https://github.com/Xing-He</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="navigation_news">新闻</string>
    <string name="navigation_about">关于</string>
    <string name="navigation_images">图片</string>
    <string name="navigation_weather">天气</string>

    <string name="top">头条</string>
    <string name="nba">NBA</string>
    <string name="cars">汽车</string>
    <string name="jokes">笑话</string>

    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="load_fail">加载数据失败!</string>
</resources>
